--- a/prometheus.yml
+++ b/prometheus.yml
@@ -18,3 +18,8 @@ scrape_configs:
   - job_name: "listen node exporter"
     static_configs:
       - targets: ["192.30.0.6:9100"]
+     #new
+  - job_name: "node_exporter_server_1"
+    static_configs:
+      - targets: ["3.239.150.93:9100"]
+
