--- a/prometheus.yml
+++ b/prometheus.yml
@@ -10,16 +10,21 @@ alerting:
 rule_files:
   - /etc/prometheus/alerts.yml
 scrape_configs:
-  - job_name: "prometheus"
+  - job_name: "ec2_instances"
+    ec2_sd_configs:
+      - region: us-east-1
+        filters:
+        name: "tag:Role"
+        values: ["CPU"]
+    relabel_configs:
+      - source_labels: [__meta_ec2_private_ip]
+        target_label: __address__
+        replacement: ${1}:9100
 
-    # static_configs:
-    #   - targets: ["localhost:9090"]
-
-  - job_name: "listen node exporter"
-    static_configs:
-      - targets: ["192.30.0.6:9100"]
-     #new
-  - job_name: "node_exporter_server_1"
-    static_configs:
-      - targets: ["3.239.150.93:9100"]
-
+  # - job_name: "listen node exporter"
+  #   static_configs:
+  #     - targets: ["192.30.0.6:9100"]
+  #    #new
+  # - job_name: "node_exporter_server_1"
+  #   static_configs:
+  #     - targets: ["3.239.150.93:9100"]
