--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,6 +1,7 @@
 # my global config
 global:
   scrape_interval: 10s
+
 alerting:
   alertmanagers:
     - static_configs:
@@ -9,13 +10,14 @@ alerting:
 
 rule_files:
   - /etc/prometheus/alerts.yml
+
 scrape_configs:
   - job_name: "ec2_instances"
     ec2_sd_configs:
       - region: us-east-1
         filters:
-        name: "tag:Role"
-        values: ["CPU"]
+          - name: "tag:Role"
+            values: ["CPU"]
     relabel_configs:
       - source_labels: [__meta_ec2_private_ip]
         target_label: __address__
