--- a/alertmanager.yml
+++ b/alertmanager.yml
@@ -2,7 +2,7 @@ global:
   resolve_timeout: 5m
 
 route:
-  receiver: "default-receiver"
+  receiver: "telegram-receiver"
   routes:
     - match_re:
         alertname: "HighCpuUsage"
