--- a/alerts.yml
+++ b/alerts.yml
@@ -6,8 +6,17 @@ groups:
         for: 1m
         labels:
           severity: critical
-          instance_role: "{{ $labels.instance_role }}"  # Добавляем метку instance_role
+          instance_role: "CPU" # Добавляем метку instance_role
         annotations:
           summary: "High CPU usage on instance {{ $labels.instance }}"
           description: "Instance {{ $labels.instance_role }} CPU usage is above 70% (current value: {{ $value }}%)"
-
+      - alert: HighVirtualMemoryUsage
+        expr: |
+          node_memory_VmallocChunk_bytes / node_memory_MemTotal_bytes * 100 > 70
+        for: 1m
+        labels:
+        severity: critical
+        instance_role: "VM"
+        annotations:
+          summary: "High virtual memory usage on instance {{ $labels.instance }}"
+          description: "Instance {{ $labels.instance }} virtual memory usage is above 70% (current value: {{ $value }}%)"
