--- a/prometheus.yml
+++ b/prometheus.yml
@@ -22,6 +22,16 @@ scrape_configs:
       - source_labels: [__meta_ec2_private_ip]
         target_label: __address__
         replacement: ${1}:9100
+  - job_name: "ec2_instances_vm"
+    ec2_sd_configs:
+      - region: us-east-1
+        filters:
+          - name: "tag:Role"
+            values: ["VM"]
+    relabel_configs:
+      - source_labels: [__meta_ec2_private_ip]
+        target_label: __address__
+        replacement: ${1}:9100
 
   # - job_name: "listen node exporter"
   #   static_configs:
