--- a/alerts.yml
+++ b/alerts.yml
@@ -7,7 +7,6 @@ groups:
         labels:
           severity: critical
           instance_role: "CPU" # Добавляем метку instance_role
-          instance: "CPU"
         annotations:
           summary: "High CPU usage on instance {{ $labels.instance }}"
           description: "Instance {{ $labels.instance_role }} CPU usage is above 70% (current value: {{ $value }}%)"
@@ -21,7 +20,10 @@ groups:
         labels:
           severity: critical
           instance_role: "VM" # Добавляем метку instance_role
-          instance: "VM" # Добавляем метку instance
+          instance: "your_instance_label" # Добавляем метку instance
         annotations:
           summary: "High virtual memory usage on instance {{ $labels.instance }}"
           description: "Instance {{ $labels.instance }} virtual memory usage is above 70% (current value: {{ $value }}%)"
+        selector:
+          match:
+            instance_role: "VM"
