--- a/alerts.yml
+++ b/alerts.yml
@@ -2,7 +2,7 @@ groups:
   - name: example
     rules:
       - alert: HighCpuUsage
-        expr: 100 - (avg by (instance) (irate(node_cpu_seconds_total{mode="idle"}[5m])) * 100) > 70
+        expr: 100 - (avg by (instance) (irate(node_cpu_seconds_total{role="CPU",mode="idle"}[5m])) * 100)  > 70
         for: 1m
         labels:
           severity: critical
@@ -12,8 +12,8 @@ groups:
           summary: "High CPU usage on instance {{ $labels.instance }}"
           description: "Instance {{ $labels.instance_role }} CPU usage is above 70% (current value: {{ $value }}%)"
       - alert: HighVirtualMemoryUsage
-        expr: node_memory_VmallocChunk_bytes / node_memory_MemTotal_bytes * 100 > 70
-        for: 1m
+        expr: avg_over_time((    (node_memory_MemTotal_bytes{role="VM"} - (node_memory_MemFree_bytes{role="VM"} + node_memory_Buffers_bytes{role="VM"} + node_memory_Cached_bytes{role="VM"})) /    node_memory_MemTotal_bytes{role="VM"} )[30s:10s]) * 100 > 60
+        for: 30s
         labels:
           severity: critical
           instance_role: "VM" # Добавляем метку instance_role
